--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Challenge: Makna Denotatif & Konotatif</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="text-center space-y-4">
@@ -55,8 +55,8 @@
       </div>
     </section>
 
-    <footer>✨ Dibuat oleh ✨</footer>
+    <footer>✨ Dibuat oleh SyamsaSJ✨</footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
